# testscripts

./: .nojekyll  README.md  about.html  contact.html  digigids.html  index.html  more.html  robots.txt  search.json  sitemap.xml
.github/: quarto-docs.yml
.github/workflows/: quarto-docs.yml
assets/: styles.css
docs/: Gemfile  _config.yml  _quarto.yml  about.qmd  contact.qmd  digigids.qmd  index.qmd  more.qmd
docs/_posts/: 2024-07-08-welcome-to-jekyll.markdown
docs/assets/: frontpage.css
examples/: automatic_mask_generator_example.html  image_predictor_example.html
scripts/_EXAMPLE_SCRIPT/: pyproject.toml
site_libs/bootstrap/: bootstrap.min.css
