[project]
name = "foo"
description = "Example description"
version = "1.0.0"
readme = "README.md"
authors = [
    { name = "Author 1", email = "author1@author1.com" },
    { name = "Author 2", email = "author2@author2.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "geopandas",
]
